# doctolib-vaccine-alert

./: .env.example  Dockerfile  LICENSE  README.md  config.ini  covid.db  pyproject.toml
data/: centers_lille.json  centers_lille_59.json  centers_lyon.json  centers_lyon_69,01.json  centers_paris-75001_75,93,94,92.json  centers_paris.json  centers_toulouse.json
src/: alert.py  get_availabilities.py  main.py  scrape_centers.py  settings.py  utils.py
