[tool.poetry]
name = "doctolib-vaccine-finder"
version = "0.1.0"
description = ""
authors = ["jean-malo <jmdelignon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.11.0"
dateparser = "^1.0.0"
PyYAML = "^5.4.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
